--- a/preview.html
+++ b/preview.html
@@ -26,31 +26,29 @@
 			<div class="rating">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
 			<div class="crown"></div>
 		</div>
-
-		<!--Content of Certificate-->
-		<div class="certificate-content">
-			<div class="title">Certificate</div>
-			<div class="date">Date</div>
-
-			<div class="subtitle"><b>of Appreciation</b></div>
-			<div class="certificate-logo">
-				<img src="img/certificate-logo.jpg">
-			</div>
-
-			<!-- Content -->
-			<div class="initial-content">This Certificate is proudly presented to</div>
-			<div class="candidate-name">Punam Manik Deore</div>
-			<div class="main-content">for successfully completing the training course as<br> prescribed by the
-				organisation</div>
-
-			<img class="sign-president-img" src="./img/president.png">
-			<div class="sign-president">Signature</div>
-
-			<div class="org-name">Maha Mission Education and Career Council</div>
+			
+<div class="certificate">
+<div class="srno">Certificate Number: </div>
+  <img class="logo" src="img/org-logo.png" alt="Company Logo">
+   <img class="logo1" src="img/certificate-logo.png" alt="certificate Logo">
+  <h1>CERTIFICATE</h1>
+  <h2>Certificate of Achievement</h2>
+  <p>This is to certify that</p>
+  <h3>Punam Manik Deore</h3>
+  <p>has successfully completed the course on</p>
+  <h2>Web Development</h2>
+	<div class="date">Date of completion</div>
+  <img class="signature" src="img/president.png" alt="Signature">
+  <div class="sign-president">Signature of President</div>
+  <img class="signature1" src="img/director.png" alt="Signature">
+			<div class="sign-director">Signature of Director</div>
+  <div class="org-name">Maha Mission Education and Career Council</div>
 			<div class="org-address">
-				<p>Office No. 404, Vastu Viva, Besids Sanket Inn, Bhumkar Chowk</p>
-				<p>Wakad, Pune, Maharashtra - 411057</p>
+				Office No. 404, Vastu Viva, Besids Sanket Inn, Bhumkar Chowk <br/>
+				Wakad, Pune, Maharashtra - 411057
 			</div>
+  
+</div>
 		</div>
 	</div>
 </body>
